contact form added and document api updated
